--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -57,7 +57,7 @@ jobs:
           path: target
 
       - name: Build Docker image
-        run: docker build -t $ECR/sjala/user_reviews:latest .
+        run: docker build -t sjala/user_reviews:latest .
 
       - name: Install and configure AWS CLI
         run: |
