--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -81,10 +81,14 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Tag and push Docker image
+      - name: Build, tag, and push docker image to Amazon ECR
+        env:
+          REGISTRY: $ECR
+          REPOSITORY: sjala/user_reviews
+          IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker tag $ECR/sjala/user_reviews:latest $ECR/sjala/user_reviews:${GITHUB_SHA}
-          docker push $ECR/jala/user_reviews:${GITHUB_SHA}
+          docker build -t $ECR/sjala/user_reviews:$IMAGE_TAG .
+          docker push $ECR/sjala/user_reviews:$IMAGE_TAG
 
       - name: Deploy to EKS
         run: |
