--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -80,15 +80,24 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-
+     
+      - name: Build and push the tagged docker image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ $ECR_REGISTRY }}
+          ECR_REPOSITORY: ${{secrets.AWS_ECR_REPO}}
+          IMAGE_TAG: latest
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: $ECR
           REPOSITORY: sjala/user_reviews
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker tag $IMAGE_TAG $ECR/sjala/user-reviews:$IMAGE_TAG
-          docker push $ECR/sjala/user_reviews:$IMAGE_TAG
+          docker build -t $REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
       - name: Deploy to EKS
         run: |
