--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -83,27 +83,25 @@ jobs:
      
       - name: Build and push the tagged docker image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ $ECR_REGISTRY }}
-          ECR_REPOSITORY: ${{secrets.AWS_ECR_REPO}}
-          IMAGE_TAG: latest
+          ECR_REPOSITORY: sjala/user-reviews
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           
       - name: Build, tag, and push docker image to Amazon ECR
         env:
-          REGISTRY: $ECR
-          REPOSITORY: sjala/user_reviews
+          ECR_REPOSITORY: sjala/user_reviews
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Deploy to EKS
         run: |
           aws eks update-kubeconfig --region $REGION --name my-eks-cluster
           mkdir -p k8s
-          export ECR_REPOSITORY_URL="$ECR/sjala/user_reviews:${GITHUB_SHA}"
+          export ECR_REPOSITORY_URL="$ECR_REGISTRY/sjala/user_reviews:${GITHUB_SHA}"
           envsubst < k8s-deployment.yaml > k8s/k8s-deployment.yaml
           echo "resources:" > k8s/kustomization.yaml
           echo "- k8s-deployment.yaml" >> k8s/kustomization.yaml
