--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -84,7 +84,7 @@ jobs:
       - name: Build and push the tagged docker image to Amazon ECR
         env:
           ECR_REPOSITORY: sjala/user-reviews
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: latest 
         run: |
           docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
@@ -93,7 +93,7 @@ jobs:
       - name: Deploy to EKS
         env:
           ECR_REPOSITORY: sjala/user-reviews
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: latest #${{ github.sha }}
         run: |
           aws eks update-kubeconfig --region $REGION --name my-eks-cluster
           mkdir -p k8s
