--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -81,15 +81,27 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
      
-      - name: Build and push the tagged docker image to Amazon ECR
+      - name: Build docker image to Amazon ECR
         env:
           ECR_REPOSITORY: sjala/user-reviews
           IMAGE_TAG: latest 
         run: |
           docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push ${{env.ECR_REGISTRY}}/$ECR_REPOSITORY:$IMAGE_TAG
 
+      - name: Tagged docker image to Amazon ECR
+        env:
+          ECR_REPOSITORY: sjala/user-reviews
+          IMAGE_TAG: latest 
+        run: |
+          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      
+      - name: Push docker image to Amazon ECR
+        env:
+          ECR_REPOSITORY: sjala/user-reviews
+          IMAGE_TAG: latest 
+        run: |
+          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          
       - name: Deploy to EKS
         env:
           ECR_REPOSITORY: sjala/user-reviews
