--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -81,26 +81,15 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
      
-      - name: Build docker image to Amazon ECR
+      - name: Build, tag, and push the image to Amazon ECR
+        id: build-image
         env:
-          ECR_REPOSITORY: sjala/user-reviews
-          IMAGE_TAG: latest 
+            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+            ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+            IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}-${{ steps.get-timestamp.outputs.timestamp }}
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-
-      - name: Tagged docker image to Amazon ECR
-        env:
-          ECR_REPOSITORY: sjala/user-reviews
-          IMAGE_TAG: latest 
-        run: |
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-      
-      - name: Push docker image to Amazon ECR
-        env:
-          ECR_REPOSITORY: sjala/user-reviews
-          IMAGE_TAG: latest 
-        run: |
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           
       - name: Deploy to EKS
         env:
