--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -69,7 +69,7 @@ jobs:
         run: echo "::set-output name=imagetag::${{ steps.get-commit-hash.outputs.commit-hash }}-${{ steps.get-timestamp.outputs.timestamp }}"
   
       - name: Build Docker image
-        run: docker build -t sjala/user_reviews:${{ steps.get-imagetag.outputs.imagetag}} .
+        run: docker build -t ${{var.USER_REPOSITORY}}:${{ steps.get-imagetag.outputs.imagetag}} .
 
       - name: Install and configure AWS CLI
         uses: unfor19/install-aws-cli-action@v1
@@ -97,21 +97,19 @@ jobs:
         id: build-image
         env:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-            ECR_REPOSITORY:  sjala/user-reviews
             IMAGE_TAG: ${{ steps.get-imagetag.outputs.imagetag }}
         run: |
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+            docker build -t $ECR_REGISTRY/${{var.USER_REPOSITORY}}:$IMAGE_TAG .
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           
       - name: Deploy to EKS
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: sjala/user-reviews
           IMAGE_TAG: ${{ steps.get-imagetag.outputs.imagetag }}
         run: |
-          aws eks update-kubeconfig --region us-east-1 --name user-reviews
+          aws eks update-kubeconfig --region ${{vars.REGION}} --name ${{var.CLUSTER_NAME}}
           mkdir -p k8s
-          export ECR_REPOSITORY_URL="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          export ECR_REPOSITORY_URL="$ECR_REGISTRY/${{var.USER_REPOSITORY}}:$IMAGE_TAG"
           envsubst < k8s-deployment.yaml > k8s/k8s-deployment.yaml
           echo "resources:" > k8s/kustomization.yaml
           echo "- k8s-deployment.yaml" >> k8s/kustomization.yaml
