--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -100,7 +100,7 @@ jobs:
             IMAGE_TAG: ${{ steps.get-imagetag.outputs.imagetag }}
         run: |
             docker build -t $ECR_REGISTRY/${{vars.USER_REPOSITORY}}:$IMAGE_TAG .
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker push $ECR_REGISTRY/${{vars.USER_REPOSITORY}}:$IMAGE_TAG
           
       - name: Deploy to EKS
         env:
