--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,4 +5,4 @@ server.port=8080
 spring.sql.init.platform=mysql
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=${SPRING.DATASOURCE.URL}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
