--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -107,6 +107,9 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ steps.get-imagetag.outputs.imagetag }}
         run: |
+          echo "ECR_REGISTRY : $ECR_REGISTRY"
+          echo "REGION       : ${{vars.REGION}}"
+          echo "CLUSTER_NAME : ${{vars.CLUSTER_NAME}}
           aws eks update-kubeconfig --region ${{vars.REGION}} --name ${{vars.CLUSTER_NAME}}
           mkdir -p k8s
           export ECR_REPOSITORY_URL="$ECR_REGISTRY/${{vars.USER_REPOSITORY}}:$IMAGE_TAG"
