--- a/iac/cloudformation/ecs-stack.yml
+++ b/iac/cloudformation/ecs-stack.yml
@@ -158,7 +158,7 @@ Resources:
             Ref: ContainerAppName
           Cpu: 256
           Memory: 512
-          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${RepositoryName}:60a02ee-2024-10-15-15-58"
+          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${RepositoryName}:8c040d1-2024-10-15-19-25"
           Essential: true
           Environment:
             - Name: SERVER_PORT
@@ -168,9 +168,9 @@ Resources:
           Secrets:
             - Name: SPRING_DATASOURCE_URL
               valueFrom: ch-dev-user-db-url
-            - Name: SPRING_DATASOURCE_USERNAME
+            - Name: DB_USER
               valueFrom: ch-dev-user-db-username
-            - Name: SPRING_DATASOURCE_PASSWORD
+            - Name: DB_PASSWORD
               valueFrom: ch-dev-user-db-password
           PortMappings:
             - ContainerPort: 8080
