turn off management endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,5 @@ logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
 
 
 #enable spring actuator
-management.endpoints.web.exposure.include=health,env
-management.endpoint.health.show-details= always
+#management.endpoints.web.exposure.include=health,env
+#management.endpoint.health.show-details= always
