commneted out the hibernate dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.application.name=user-reviews
 
-hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+#hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 spring.security.user.name=admin
 spring.security.user.password=admin
 
