--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ logging.level.org.springframework.web: DEBUG
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 # for Hibernate only
-#logging.level.org.hibernate=TRACE
-logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
+logging.level.org.hibernate=TRACE
+#logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
 
 
 #enable spring actuator
