increase root log leveel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.path=/api-docs
 
-logging.level.ROOT=INFO
+logging.level.ROOT=TRACE
 logging.level.org.springframework.web: DEBUG
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
