--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -114,12 +114,14 @@ jobs:
           echo "ECR_REGISTRY : $ECR_REGISTRY"
           echo "REGION       : ${{vars.REGION}}"
           echo "CLUSTER_NAME : ${{vars.CLUSTER_NAME}}"
-          TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "$TASK_DEFINITION_NAME" --region "${{vars.REGION}}")
-          NEW_CONTAINER_DEFINTIION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$REPOSITORY_URL:$IMAGE_TAG" '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
+          echo "SERVICE_NAME : $SERVICE_NAME"
+          echo "TASK_DEFINITION_NAME : $TASK_DEFINITION_NAME"
+          TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION_NAME --region ${{vars.REGION}})
+          NEW_CONTAINER_DEFINTIION=$(echo $TASK_DEFINITION | jq --arg IMAGE $REPOSITORY_URL:$IMAGE_TAG '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
           echo "Registering new container definition..."
-          aws ecs register-task-definition --region "${{vars.REGION}}" --family "$TASK_DEFINITION_NAME" --container-definitions "$NEW_CONTAINER_DEFINTIION"
+          aws ecs register-task-definition --region ${{vars.REGION}} --family $TASK_DEFINITION_NAME --container-definitions $NEW_CONTAINER_DEFINTIION
           echo "Updating the service..."
-          aws ecs update-service --region "${{vars.REGION}}" --cluster "${{vars.CLUSTER_NAME}}" --service "${SERVICE_NAME}"  --task-definition "$TASK_DEFINITION_NAME"
+          aws ecs update-service --region ${{vars.REGION}} --cluster ${{vars.CLUSTER_NAME}} --service ${SERVICE_NAME}  --task-definition $TASK_DEFINITION_NAME
 
 
       #- name: Deploy Kubernest Dashboard
