--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,12 +19,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.path=/api-docs
 
-logging.level.ROOT=TRACE
-logging.level.org.springframework.web: DEBUG
-logging.level.org.springframework.orm.jpa=DEBUG
-logging.level.org.springframework.transaction=DEBUG
+logging.level.ROOT=ERROR
+logging.level.org.springframework.web: ERROR
+logging.level.org.springframework.orm.jpa=ERROR
+logging.level.org.springframework.transaction=ERROR
 # for Hibernate only
-logging.level.org.hibernate=TRACE
+logging.level.org.hibernate=ERROR
 #logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
 
 
