--- a/.github/workflows/CI_CD_K8_Deployment.yaml
+++ b/.github/workflows/CI_CD_K8_Deployment.yaml
@@ -119,7 +119,7 @@ jobs:
           NEW_CONTAINER_DEFINTIION=$(echo $TASK_DEFINITION | jq --arg IMAGE $REPOSITORY_URL:$IMAGE_TAG '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
           echo "NEW_CONTAINER_DEFINTIION: $NEW_CONTAINER_DEFINTIION"
           echo "Registering new container definition..."
-          aws ecs register-task-definition --region ${{vars.REGION}} --family $TASK_DEFINITION_NAME --container-definitions $NEW_CONTAINER_DEFINTIION
+          aws ecs register-task-definition --region ${{vars.REGION}} --family $TASK_DEFINITION_NAME --container-definitions "$NEW_CONTAINER_DEFINTIION"
           echo "Updating the service..."
           aws ecs update-service --region ${{vars.REGION}} --cluster ${{vars.CLUSTER_NAME}} --service ${SERVICE_NAME}  --task-definition $TASK_DEFINITION_NAME
 
