--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,13 +13,14 @@ spring.security.user.password=admin
 
 #automatically create/update tables
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 #load the initial data
 #spring.sql.init.data-locations=classpath:data-mysql.sql
 
 springdoc.api-docs.path=/api-docs
 
-logging.level.ROOT=ERROR
+logging.level.ROOT=INFO
 logging.level.org.springframework.web: ERROR
 logging.level.org.springframework.orm.jpa=ERROR
 logging.level.org.springframework.transaction=ERROR
