--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,16 @@
 server.port=8081
 
 #Using H2 database
-#spring.h2.console.enable=true
-#spring.datasource.url=jdbc:h2:mem:socialmedia
-#spring.datasource.platform=h2
-#spring.sql.init.platform=h2
-#spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enable=true
+spring.datasource.url=jdbc:h2:mem:socialmedia
+spring.sql.init.platform=h2
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 #Using MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/socialmedia
-spring.sql.init.platform=mysql
-spring.datasource.username=sjala
-spring.datasource.password=JalaJala123
+#spring.datasource.url=jdbc:mysql://localhost:3306/socialmedia
+#spring.sql.init.platform=mysql
+#spring.datasource.username=sjala
+#spring.datasource.password=JalaJala123
+
