--- a/pom.xml
+++ b/pom.xml
@@ -74,10 +74,29 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.openapitools</groupId>
+		    <artifactId>openapi-generator-maven-plugin</artifactId>
+		    <version>7.9.0</version>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+		    <plugin>
+			    <groupId>org.springdoc</groupId>
+			    <artifactId>springdoc-openapi-maven-plugin</artifactId>
+			    <version>1.4</version>
+			    <executions>
+			        <execution>
+			            <id>integration-test</id>
+			            <goals>
+			                <goal>generate</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
