--- a/.github/workflows/CI_CD_ECS_EC2_Deploment.yaml
+++ b/.github/workflows/CI_CD_ECS_EC2_Deploment.yaml
@@ -120,10 +120,7 @@ jobs:
         env:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             IMAGE_TAG: ${{ steps.get-imagetag.outputs.imagetag }}
-        run: |
-            cd iac/ecs_ec2
-            terraform init
-            terraform apply --auto-approve=true -var user_reviews_image=$ECR_REGISTRY/${{vars.USER_REPOSITORY}}:$IMAGE_TAG
+        run: terraform apply --auto-approve=true -var user_reviews_image=$ECR_REGISTRY/${{vars.USER_REPOSITORY}}:$IMAGE_TAG
 
             
       
