--- a/.github/workflows/CI_CD_ECS_EC2_Deploment.yaml
+++ b/.github/workflows/CI_CD_ECS_EC2_Deploment.yaml
@@ -106,21 +106,19 @@ jobs:
       - name: Setup Terraform
         id: setup-terraform
         uses: hashicorp/setup-terraform@v2
-
+    
       - name: Terraform Init
-        run: 
-            cd iac/ecs_ec2
-            terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
+        run: terraform init
       
+      - name: Terraform Format
+        run: terraform fmt -check
+      
+      - name: Terraform Plan
+        run: terraform plan -input=false
+      
+        # On push to "main", deploy the Terraform infrastructure
       - name: Terraform Apply
-        id: terraform-apply
-        env:
-            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-            IMAGE_TAG: ${{ steps.get-imagetag.outputs.imagetag }}
-        run: terraform apply --auto-approve=true -var user_reviews_image=$ECR_REGISTRY/${{vars.USER_REPOSITORY}}:$IMAGE_TAG
-
-            
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false
+        
       
