--- a/.github/workflows/CI_CD_ECS_EC2_Deploment.yaml
+++ b/.github/workflows/CI_CD_ECS_EC2_Deploment.yaml
@@ -71,6 +71,21 @@ jobs:
       - name: Build Docker image
         run: docker build -t ${{vars.USER_REPOSITORY}}:${{ steps.get-imagetag.outputs.imagetag}} .
 
+    # Install Trivy
+      - name: Install Trivy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget apt-transport-https gnupg lsb-release
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install -y trivy
+
+      # Scan Docker image with Trivy
+      - name: Scan Docker image for vulnerabilities
+        run: |
+          trivy image --exit-code 1 --severity HIGH,CRITICAL ${{vars.USER_REPOSITORY}}:${{ steps.get-imagetag.outputs.imagetag}}
+
       - name: Install and configure AWS CLI
         uses: unfor19/install-aws-cli-action@v1
         with:
