--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
+		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sjala.springboot3</groupId>
@@ -63,7 +63,7 @@
 		<dependency>
 		  <groupId>org.springdoc</groupId>
 		  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-		  <version>2.5.0</version>
+		  <version>2.6.0</version>
 		</dependency>	
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -80,6 +80,11 @@
 		    <version>7.9.0</version>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+	      <groupId>io.micrometer</groupId>
+	      <artifactId>micrometer-registry-prometheus</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
 	</dependencies>
 
 	<build>
